git: make git-commit(2) keep trailing space
git-commit(2) will remove all trailing space by default
(commit.cleanup=strip). Unfortunately, there is no option to keep
trailing whitespace but remove comments, so we SHALL use
commit.cleanup=verbatim with commit.status=false together.

Ref: https://datatracker.ietf.org/doc/html/rfc3676

Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -30,8 +30,15 @@
 # https://people.kernel.org/monsieuricon/signed-git-pushes
 [push]
     gpgSign = if-asked
+
 [commit]
     gpgsign = true
+    # Otherwise git will remove trailing whitespace and break soft line break.
+    # Git doesn't provide an option to keep trailing whitespace but remove commnets.
+    # So it SHALL be used with commit.status=false to avoid remove commit status manually.
+    cleanup = verbatim
+    status = false
+
 [tag]
     gpgsign = true
 
