--- a/git/.config/git/format.config
+++ b/git/.config/git/format.config
@@ -36,7 +36,7 @@
 [log]
     date = iso-local
 [format]
-    pretty = fuller
+    pretty = "%C(bold yellow)commit %H% d%Creset%nAuthor:      %aN <%aE>%nAuthorDate:  %ad%nCommit:      %cN <%cE>%nCommitDate:  %cd%n%n%w(0,4,4)%s%n%n%b%w(0,0,0)%n%nCommitNotes:%n%w(0,4,4)%N%n%w()"
 [pretty]
     fixes = Fixes: %h (\"%s\")
 
