--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -44,6 +44,10 @@
 
 [tag]
     gpgsign = true
+    sort = version:refname
+
+[branch]
+    sort = -committerdate
 
 [init]
     defaultBranch = master
