git: ignore revisions by .git-blame-ignore-revs when get-blame(2)
GitHub, Gitea, Forgejo and GitLab load this file as well.

[1]: https://docs.github.com/en/repositories/working-with-files/using-files/viewing-a-file#ignore-commits-in-the-blame-view
[2]: https://docs.gitea.com/usage/blame#ignore-commits-in-the-blame-view
[3]: https://forgejo.org/docs/latest/user/blame/#ignore-commits-in-the-blame-view
[4]: https://docs.gitlab.com/user/project/repository/files/git_blame/#ignore-specific-revisions

Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -52,6 +52,9 @@
 [init]
     defaultBranch = master
 
+[blame]
+    ignoreRevsFile = .git-blame-ignore-revs
+
 # Parallel Checkout
 # The default is one.
 # If set to a value less than one, Git will use as many workers as the number of logical cores available.
