fontconfig: orgnize configs according to conf.d/README
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/20-zhudou-sans.conf
+++ b/fontconfig/.config/fontconfig/conf.d/20-zhudou-sans.conf
@@ -30,33 +30,8 @@
   
   -->
 
-  <!-- Fira Code -->
-  <match target="scan">
-    <test name="family" compare="contains" ignore-blanks="true">
-      <string>Fira Code</string>
-    </test>
-    <edit name="fontfeatures" mode="append">
-      <string>cv02 on</string> <!-- better g -->
-      <string>cv04 on</string> <!-- better i -->
-      <string>cv09 on</string> <!-- better l -->
-      <string>ss05 on</string> <!-- better @ -->
-      <string>ss03 on</string> <!-- better & -->
-      <string>cv16 on</string> <!-- better star -->
-      <string>ss10 off</string> <!-- disable bad ligature -->
-    </edit>
-  </match>
-  <!-- Monaco -->
-  <match target="scan">
-    <test name="family" qual="any">
-      <string>Monaco</string>
-    </test>
-    <edit name="fontfeatures" mode="append">
-      <string>liga off</string>
-      <string>dlig off</string>
-    </edit>
-  </match>
   <!-- Zhudou Sans -->
-  <match target="scan">
+  <match>
     <test name="family" qual="any">
       <string>Zhudou Sans</string>
     </test>
