--- a/fontconfig/.config/fontconfig/conf.d/30-replace-charset.conf
+++ b/fontconfig/.config/fontconfig/conf.d/30-replace-charset.conf
@@ -6,7 +6,7 @@
     If some fonts contain emoji glyphs, they could interfere and make some emojis rendered in wrong
     font (often in black-and-white).
   -->
-  <match target="scan">
+  <match>
     <test name="family" compare="contains">
       <string>DejaVu</string>
     </test>
@@ -28,7 +28,7 @@
   <!--
     I prefer CHECK MARK of Source Han Sans
   -->
-  <match target="scan">
+  <match>
     <test name="family" compare="not_contains">
       <string>Source Han Sans</string>
     </test>
@@ -45,7 +45,7 @@
     Blacklist private range codepoints from non-icon fonts
   -->
   <!--
-  <match target="scan">
+  <match>
     <test name="family" compare="not_contains">
       <string>Nerd</string>
     </test>
