fontconfig: remove redundant comments
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/20-fira-code.conf
+++ b/fontconfig/.config/fontconfig/conf.d/20-fira-code.conf
@@ -1,7 +1,6 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM 'urn:fontconfig:fonts.dtd'>
 <fontconfig>
-  <description>Enable select OpenType features.</description>
   <!--
       Typographic features are provided on a per-typeface basis.
       Tables with all available features are available here:
@@ -20,17 +19,10 @@
   -->
 
   <!--
-      It wroks, but Firefox and Qt don't support OpenType feature.
-      It’s worth noting that Iosevka SS10 does not include other variants.
-  
+      It wroks, but Qt don't support OpenType feature.
       https://bugreports.qt.io/browse/QTBUG-78645
-      https://bugzilla.mozilla.org/show_bug.cgi?id=1744765
-  
-      Test command: echo -e "y * _ {} <= >= β" | pango-view __font="Iosevka" /dev/stdin
-  
   -->
 
-  <!-- Fira Code -->
   <match>
     <test name="family" qual="any">
       <string>Fira Code</string>
