fontconfig: do right order for Arabic, Urdu and Persian
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/60-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-generic.conf
@@ -94,6 +94,12 @@
       <family>IBM Plex Sans</family>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
       <family>Noto Sans CJK SC</family>
+      <!-- 
+        Arabic, Urdu and Persian, before CJK font to avoid font have some characters for them.
+        Such as Plangothic...
+      -->
+      <family>Noto Naskh Arabic</family>
+      <family>Noto Nastaliq Urdu</family>
       <!-- 补全生僻字 -->
       <family>Plangothic P1</family>
       <family>Plangothic P2</family>
@@ -113,6 +119,12 @@
       <family>Noto Serif</family>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
       <family>Noto Serif CJK SC</family>
+      <!-- 
+        Arabic, Urdu and Persian, before CJK font to avoid font have some characters for them.
+        Such as Plangothic...
+      -->
+      <family>Noto Naskh Arabic</family>
+      <family>Noto Nastaliq Urdu</family>
       <!-- 补全生僻字 -->
       <family>NazonoMincho</family>
       <family>NazonoMincho+</family>
