--- a/fontconfig/.config/fontconfig/conf.d/60-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-generic.conf
@@ -90,7 +90,7 @@
   <alias binding="strong">
     <family>sans-serif</family>
     <prefer>
-      <family>Andika</family>
+      <family>Asap</family>
       <family>IBM Plex Sans</family>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
       <family>Noto Sans CJK SC</family>
