sysctl: improve comments for SACK
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/sysctl/99-perf.conf
+++ b/sysctl/99-perf.conf
@@ -68,8 +68,9 @@ net.ipv4.tcp_congestion_control = bbr
 # https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netipv4ip_local_port_range
 net.ipv4.ip_local_port_range = 4096 65535
 
-# enabling SACK can increase the throughput
-# but SACK is commonly exploited and rarely used
+# enabling SACK can improve congestion control and throughput
+# but it could also be leveraged to exhaust system resources
+# commonly exploited and rarely used
 net.ipv4.tcp_sack = 1
 net.ipv4.tcp_dsack = 1
 net.ipv4.tcp_fack = 1
