sysctl: enable ECN (Explicit Congestion Notification)
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/sysctl/99-perf.conf
+++ b/sysctl/99-perf.conf
@@ -90,3 +90,9 @@ net.ipv4.tcp_adv_win_scale = -2
 net.ipv4.tcp_collapse_max_bytes = 6291456
 # limit the size of unsent bytes in the write queue to prevent bufferbloat
 net.ipv4.tcp_notsent_lowat = 131072
+
+# Explicit Congestion Notification
+# 0: disable, 1: active, 2: passive
+net.ipv4.tcp_ecn = 1
+# Enable active ECN require to enable fallback mechanism to mitigating issues with ECN-intolerant hosts or firewalls.
+net.ipv4.tcp_ecn_fallback = 1
