sysctl: switch qdisc algorithm from cake to fq_pie
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/sysctl/99-perf.conf
+++ b/sysctl/99-perf.conf
@@ -40,9 +40,9 @@ net.core.wmem_max = 536870912
 net.core.optmem_max = 65536
 
 # queue disciplines
-# available: pfifo_fast(default) fq codel fq_codel cake(4.19)
+# available: pfifo_fast(default) fq codel fq_codel(4.15) fq_pie(5.10) cake(4.19)
 # https://www.starduster.me/2020/03/02/linux-network-tuning-kernel-parameter/#netcoredefault_qdisc
-net.core.default_qdisc = cake
+net.core.default_qdisc = fq_pie
 
 ########## IPv4 Networking ##########
 
