fontconfig: use WenJin Mincho
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/60-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-generic.conf
@@ -105,6 +105,10 @@
       <family>Plangothic P2</family>
       <family>NazonoMincho</family>
       <family>NazonoMincho+</family>
+      <family>WenJin Mincho Plane 0</family>
+      <family>WenJin Mincho Plane 1</family>
+      <family>WenJin Mincho Plane 2</family>
+      <family>WenJin Mincho Plane 3</family>
       <family>Jigmo</family>
       <family>Jigmo2</family>
       <family>Jigmo3</family>
@@ -128,6 +132,10 @@
       <!-- 补全生僻字 -->
       <family>NazonoMincho</family>
       <family>NazonoMincho+</family>
+      <family>WenJin Mincho Plane 0</family>
+      <family>WenJin Mincho Plane 1</family>
+      <family>WenJin Mincho Plane 2</family>
+      <family>WenJin Mincho Plane 3</family>
       <family>Jigmo</family>
       <family>Jigmo2</family>
       <family>Jigmo3</family>
