git(alias/fixup): fix situation when target is the root commit
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -26,7 +26,7 @@
 
     # https://blog.filippo.io/git-fixup-amending-an-older-commit/
     # We can use git revise instead
-    fixup = "!f() { TARGET=$(git rev-parse \"$1\"); shift; git commit --fixup=$TARGET ${@} && git rebase --autostash --autosquash $TARGET^; }; f"
+    fixup = "!f() { TARGET=$(git rev-parse \"$1\"); shift; git commit --fixup=$TARGET ${@} && { if git log --pretty=%P -1 $TARGET | grep -q '^$'; then git rebase --autostash --autosquash --root; else git rebase --autostash --autosquash $TARGET^; fi } }; f"
     
     # Generate Linux kernel fix message
     k-fix-msg = log -1 --abbrev=12 --pretty=fixes
