fontconfig: use PT Serif as default font
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/60-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-generic.conf
@@ -119,7 +119,8 @@
   <alias binding="strong">
     <family>serif</family>
     <prefer>
-      <family>Merriweather</family>
+      <family>PT Serif Pro</family>
+      <family>PT Serif</family>
       <family>Noto Serif</family>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
       <family>Noto Serif CJK SC</family>
