fontconfig: use PT Astra Serif as Times New Roman metric-compatible font
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/30-web-postscript-safe-fonts.conf
+++ b/fontconfig/.config/fontconfig/conf.d/30-web-postscript-safe-fonts.conf
@@ -33,6 +33,7 @@
   <alias binding="same">
     <family>Times New Roman</family>
     <prefer>
+      <family>PT Astra Serif</family>
       <family>Liberation Serif</family>
       <family>Nimbus Roman</family>
     </prefer>
@@ -40,6 +41,7 @@
   <alias binding="same">
     <family>Times</family>
     <prefer>
+      <family>PT Astra Serif</family>
       <family>Liberation Serif</family>
       <family>Nimbus Roman</family>
     </prefer>
