fontconfig: use Chiron fonts instead of Shanggu fonts
Shanggu fonts stop to update.

Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/61-use-chiron-for-tc.conf
+++ b/fontconfig/.config/fontconfig/conf.d/61-use-chiron-for-tc.conf
@@ -1,58 +1,58 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
-  <description>对繁体中文使用尚古字体</description>
+  <description>对繁体中文使用昭源字体</description>
   <!--
-    Shanggu Fonts doesn't support locl feature,
+    Chiron Fonts doesn't support locl feature,
     so I can't use it as default fonts.
   -->
   
   <alias binding="same">
     <family>Source Han Sans TC</family>
     <prefer>
-      <family>Shanggu Sans TC VF</family>
+      <family>Chiron Hei HK VF</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Source Han Serif TC</family>
     <prefer>
-      <family>Shanggu Serif TC VF</family>
+      <family>Chiron Sung HK VF</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Source Han Sans HC</family>
     <prefer>
-      <family>Shanggu Sans TC VF</family>
+      <family>Chiron Hei HK VF</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Source Han Serif HC</family>
     <prefer>
-      <family>Shanggu Serif TC VF</family>
+      <family>Chiron Sung HK VF</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Noto Sans CJK TC</family>
     <prefer>
-      <family>Shanggu Sans TC VF</family>
+      <family>Chiron Hei HK VF</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Noto Serif CJK TC</family>
     <prefer>
-      <family>Shanggu Serif TC VF</family>
+      <family>Chiron Sung HK VF</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Noto Sans CJK HK</family>
     <prefer>
-      <family>Shanggu Sans TC VF</family>
+      <family>Chiron Hei HK VF</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Noto Serif CJK HK</family>
     <prefer>
-      <family>Shanggu Serif TC VF</family>
+      <family>Chiron Sung HK VF</family>
     </prefer>
   </alias>
 
@@ -64,7 +64,7 @@
       <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -75,7 +75,7 @@
       <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -86,7 +86,7 @@
       <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -97,7 +97,7 @@
       <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -108,7 +108,7 @@
       <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -119,7 +119,7 @@
       <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -130,7 +130,7 @@
       <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -141,7 +141,7 @@
       <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -152,7 +152,7 @@
       <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -163,7 +163,7 @@
       <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -174,7 +174,7 @@
       <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -185,7 +185,7 @@
       <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -196,7 +196,7 @@
       <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -207,7 +207,7 @@
       <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -218,7 +218,7 @@
       <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -229,7 +229,7 @@
       <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -240,7 +240,7 @@
       <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -251,7 +251,7 @@
       <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -262,7 +262,7 @@
       <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -273,7 +273,7 @@
       <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -284,7 +284,7 @@
       <string>Source Han Sans SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -295,7 +295,7 @@
       <string>Source Han Serif SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -306,7 +306,7 @@
       <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -317,7 +317,7 @@
       <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -328,7 +328,7 @@
       <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -339,7 +339,7 @@
       <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -350,7 +350,7 @@
       <string>Noto Sans CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
+      <string>Chiron Hei HK VF</string>
     </edit>
   </match>
   <match target="pattern">
@@ -361,7 +361,7 @@
       <string>Noto Serif CJK SC</string>
     </test>
     <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
+      <string>Chiron Sung HK VF</string>
     </edit>
   </match>
 </fontconfig>
