--- a/fontconfig/.config/fontconfig/conf.d/60-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/60-generic.conf
@@ -91,7 +91,8 @@
     <family>sans-serif</family>
     <prefer>
       <family>Asap</family>
-      <family>IBM Plex Sans</family>
+      <family>PT Sans Pro</family>
+      <family>PT Sans</family>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
       <family>Noto Sans CJK SC</family>
       <!-- 
