clang: add JSON schema for clangd and clang-tidy configs
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/clang/.config/clangd/config.yaml
+++ b/clang/.config/clangd/config.yaml
@@ -1,3 +1,6 @@
+# yaml-language-server: $schema=https://json.schemastore.org/clangd.json
+# vim: ft=yaml:
+# kate: syntax yaml;
 InlayHints:
   Enabled: Yes
 
