fontconfig: avoid font have no onum feature but default old style
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/20-disable-onum.conf
+++ b/fontconfig/.config/fontconfig/conf.d/20-disable-onum.conf
@@ -8,6 +8,7 @@
     </test>
     <edit name="fontfeatures" mode="append">
       <string>onum off</string>
+      <string>lnum on</string>
     </edit>
   </match>
 </fontconfig>
