fontconfig: use Early Summer Serif
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/fontconfig/.config/fontconfig/conf.d/61-use-chiron-for-tc.conf
+++ b/fontconfig/.config/fontconfig/conf.d/61-use-chiron-for-tc.conf
@@ -1,9 +1,9 @@
 <?xml version='1.0'?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
-  <description>对繁体中文使用昭源字体</description>
+  <description>对繁体中文使用传承字形</description>
   <!--
-    Chiron Fonts doesn't support locl feature,
+    Chiron Fonts and Early Summer Serif doesn't support locl feature,
     so I can't use it as default fonts.
   -->
   
@@ -16,6 +16,7 @@
   <alias binding="same">
     <family>Source Han Serif TC</family>
     <prefer>
+      <family>Early Summer Serif</family>
       <family>Chiron Sung HK VF</family>
     </prefer>
   </alias>
@@ -28,6 +29,7 @@
   <alias binding="same">
     <family>Source Han Serif HC</family>
     <prefer>
+      <family>Early Summer Serif</family>
       <family>Chiron Sung HK VF</family>
     </prefer>
   </alias>
@@ -40,6 +42,7 @@
   <alias binding="same">
     <family>Noto Serif CJK TC</family>
     <prefer>
+      <family>Early Summer Serif</family>
       <family>Chiron Sung HK VF</family>
     </prefer>
   </alias>
@@ -52,6 +55,7 @@
   <alias binding="same">
     <family>Noto Serif CJK HK</family>
     <prefer>
+      <family>Early Summer Serif</family>
       <family>Chiron Sung HK VF</family>
     </prefer>
   </alias>
