ssh: use mptcp_fdpass.py to enable MPTCP
Signed-off-by: Coelacanthus <uwu@coelacanthus.name>

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -26,6 +26,9 @@ Match all
     Protocol 2
     # Pass Environment variable to server
     SendEnv COLORTERM
+    # TODO: ProxyUseFdpass need to be disabled if host use there own ProxyCommand
+    ProxyUseFdpass yes
+    ProxyCommand ~/.ssh/mptcp_fdpass.py %h %p
 
 Include local.post
 
