--- a/git/.config/git/instead.config
+++ b/git/.config/git/instead.config
@@ -13,6 +13,7 @@
 
 [url "git@gist.github.com:"]
     pushInsteadOf = "gist:"
+    pushInsteadOf = "https://gist.github.com/"
     pushInsteadOf = "git://gist.github.com/"
 
 [url "git@bitbucket.org:"]
